tests/fixtures/language/v3/invalid/entities/wrong-version.allium
-- allium: 99

entity Foo {
    bar: String
}
